Add "Search for Apps" menu item.

--- a/android/android.main/res/menu/main.xml
+++ b/android/android.main/res/menu/main.xml
@@ -1,15 +1,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <!-- Search / will display always -->
+    <!-- Search / will display always
     <item
         android:id="@+id/action_search"
         android:actionViewClass="android.widget.SearchView"
         android:icon="@drawable/ic_action_search"
         android:showAsAction="ifRoom"
-        android:title="@string/action_search"/>
+        android:title="@string/action_search"/> -->
+    <item
+        android:id="@+id/action_search_for_apps"
+        android:orderInCategory="102"
+        android:title="@string/action_search_for_apps"/>
     <item
         android:id="@+id/action_advanced"
-        android:orderInCategory="104"
+        android:orderInCategory="103"
         android:title="@string/action_advanced"/>
 
 </menu>
