WIP: onClick handler to speech bubble contents.

--- a/android/android.main/res/layout/list_item_party_message.xml
+++ b/android/android.main/res/layout/list_item_party_message.xml
@@ -23,6 +23,8 @@
             android:id="@+id/messageContent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="true"
+            android:onClick="messageOnClick"
             android:textSize="15sp" />
 
         <TextView
