--- a/android/apps/voicemessage/res/layout/activity_voice_message.xml
+++ b/android/apps/voicemessage/res/layout/activity_voice_message.xml
@@ -10,9 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:background="?android:attr/selectableItemBackground"
         android:contentDescription="TODO"
-        android:src="@drawable/mic" >
+        android:src="@drawable/mic_big" >
     </ImageView>
 
     <TextView
