--- a/android/apps/voicemessage/res/layout/activity_open_voice_message.xml
+++ b/android/apps/voicemessage/res/layout/activity_open_voice_message.xml
@@ -15,36 +15,46 @@
     </ImageView>
 
     <ImageButton
-        android:id="@+id/btn_play_pause"
+        android:id="@+id/btn_play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/img_mic"
         android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
         android:contentDescription="TODO"
-        android:src="@android:drawable/ic_media_play" >
+        android:src="@android:drawable/ic_media_play"
+        android:visibility="invisible" >
+    </ImageButton>
+
+    <ImageButton
+        android:id="@+id/btn_pause"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/img_mic"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:contentDescription="TODO"
+        android:src="@android:drawable/ic_media_pause" >
     </ImageButton>
 
     <TextView
-        android:id="@+id/recording_current_time"
+        android:id="@+id/recording_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_margin="10dp"
-        android:layout_toRightOf="@+id/btn_play_pause"
-        android:text="00:00"
+        android:layout_toRightOf="@+id/btn_pause"
         android:textAppearance="@android:style/TextAppearance.Small"
         android:textColor="@android:color/primary_text_dark" />
 
     <SeekBar
-        android:id="@+id/progress_bar"
+        android:id="@+id/recording_progress_bar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginRight="5dip"
-        android:layout_toRightOf="@+id/recording_current_time"
-        android:max="100"
-        android:progress="0"
-        android:secondaryProgress="0" />
+        android:layout_toRightOf="@+id/recording_time" />
 
 </RelativeLayout>
