--- a/android/android.main/res/menu/main.xml
+++ b/android/android.main/res/menu/main.xml
@@ -2,6 +2,7 @@
 
     <item
         android:id="@+id/action_add_contact"
+        android:icon="@drawable/ic_add_contact"
         android:orderInCategory="100"
         android:showAsAction="always"
         android:title="@string/action_add_contact"/>
