main: automatically convert text patterns (URLs, email, map and phone) into clickable links

--- a/android/android.main/res/layout/list_item_user_message.xml
+++ b/android/android.main/res/layout/list_item_user_message.xml
@@ -24,6 +24,7 @@
             android:id="@+id/messageContent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:autoLink="all"
             android:textSize="15sp" />
 
         <TextView
