main: WIP previewing images on ConversationActivity

--- a/android/android.main/res/layout/list_item_user_message.xml
+++ b/android/android.main/res/layout/list_item_user_message.xml
@@ -20,10 +20,19 @@
         android:background="@drawable/user_speech_bubble"
         android:padding="10dp" >
 
+        <ImageView
+            android:id="@+id/img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="TODO"
+            android:src="@android:drawable/ic_lock_lock" >
+        </ImageView>
+
         <TextView
             android:id="@+id/messageContent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/img"
             android:textSize="15sp" />
 
         <TextView
