--- a/android/android.main/res/layout/list_item_party_message.xml
+++ b/android/android.main/res/layout/list_item_party_message.xml
@@ -19,10 +19,19 @@
         android:background="@drawable/contact_speech_bubble"
         android:padding="10dp" >
 
+        <ImageView
+            android:id="@+id/img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="TODO"
+            android:src="@drawable/place_holder_map" >
+        </ImageView>
+
         <TextView
             android:id="@+id/messageContent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/img"
             android:textSize="15sp" />
 
         <TextView
