--- a/android/android.main/res/layout/list_item_party_message.xml
+++ b/android/android.main/res/layout/list_item_party_message.xml
@@ -31,7 +31,7 @@
             android:id="@+id/messageContent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/img"
+            android:layout_below="@+id/img"
             android:textSize="15sp" />
 
         <TextView
