:fire: main: remove place holder image from conversation

--- a/android/android.main/res/layout/list_item_user_message.xml
+++ b/android/android.main/res/layout/list_item_user_message.xml
@@ -24,8 +24,7 @@
             android:id="@+id/img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="TODO"
-            android:src="@drawable/place_holder_map" >
+            android:contentDescription="TODO" >
         </ImageView>
 
         <TextView
