--- a/android/android.main/res/menu/main.xml
+++ b/android/android.main/res/menu/main.xml
@@ -2,10 +2,9 @@
 
     <item
         android:id="@+id/action_add_contact"
-        android:icon="@drawable/ic_add_contact"
+        android:icon="@drawable/ic_add_contact_menu"
         android:orderInCategory="100"
         android:showAsAction="always"
-        android:visible="false"
         android:title="@string/action_add_contact"/>
     <item
         android:id="@+id/action_search_for_apps"
