--- a/android/android.main/res/layout/activity_system_report.xml
+++ b/android/android.main/res/layout/activity_system_report.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="sneer.android.main.ui.SystemReportActivity" >
+    tools:context="sneer.android.ui.SystemReportActivity" >
 
     <ScrollView
         android:id="@+id/scrollView"
