--- a/android/android.main/res/layout/list_item_party_message.xml
+++ b/android/android.main/res/layout/list_item_party_message.xml
@@ -23,7 +23,8 @@
             android:id="@+id/img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/messageContent" >
+            android:layout_toRightOf="@+id/messageContent"
+            android:visibility="gone" >
         </ImageView>
 
         <TextView
