--- a/android/android.main/src/main/res/layout/activity_main.xml
+++ b/android/android.main/src/main/res/layout/activity_main.xml
@@ -17,6 +17,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
-        android:text="Add Contact" />
+        android:text="Add Sovereign Contact" />
 
 </LinearLayout>
