android.main: make conversation text selectable

--- a/android/android.main/src/main/res/layout/list_item_party_message.xml
+++ b/android/android.main/src/main/res/layout/list_item_party_message.xml
@@ -1,15 +1,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:gravity="left"
-    android:padding="10dp" >
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:padding="10dp">
 
     <View
         android:id="@+id/speechBubbleArrowLeft"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_alignTop="@+id/speechBubble"
-        android:background="@drawable/drawble_dummy" />
+        android:background="@drawable/drawble_dummy"/>
 
     <RelativeLayout
         android:id="@+id/speechBubble"
@@ -17,14 +17,14 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/speechBubbleArrowLeft"
         android:background="@drawable/contact_speech_bubble"
-        android:padding="10dp" >
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/messageContent"
-            android:visibility="gone" >
+            android:visibility="gone">
         </ImageView>
 
         <TextView
@@ -33,7 +33,8 @@
             android:layout_height="wrap_content"
             android:minWidth="40dp"
             android:paddingRight="5dp"
-            android:textSize="15sp" />
+            android:textIsSelectable="true"
+            android:textSize="15sp"/>
 
         <TextView
             android:id="@+id/messageTime"
@@ -43,7 +44,7 @@
             android:layout_alignParentBottom="true"
             android:layout_below="@+id/messageContent"
             android:textColor="#777"
-            android:textSize="12sp" />
+            android:textSize="12sp"/>
     </RelativeLayout>
 
 </RelativeLayout>
