--- a/android/android.main/src/main/res/menu/main.xml
+++ b/android/android.main/src/main/res/menu/main.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/action_search_for_apps"
         android:orderInCategory="102"
-        android:visible="false"
+        android:visible="true"
         android:title="@string/action_search_for_apps"/>
     <item
         android:id="@+id/action_advanced"
