--- a/android/android.main/src/main/res/layout/activity_main.xml
+++ b/android/android.main/src/main/res/layout/activity_main.xml
@@ -17,6 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
+        android:background="#eee"
+        style="?android:attr/buttonBarButtonStyle"
         android:text="Add Sovereign Contact" />
 
 </LinearLayout>
